# ReportsGenerator

./: .dockerignore  .gitignore  Dockerfile  README.md  Thumbs.db  check.html  main.py  pyproject.toml
attendance_modifier/: .gitignore  Dockerfile  QUICKSTART.md  README.md  main.py  requirements.txt
attendance_modifier/core/: enums.py  exceptions.py  models.py
attendance_modifier/interfaces/: modifier.py  parser.py  pdf_generator.py  pdf_reader.py
attendance_modifier/parsers/: parser_factory.py  type_a_parser.py  type_b_parser.py
attendance_modifier/services/: classifier.py  ocr_reader_impl.py  pdf_generator_impl.py  pdf_reader_impl.py  pipeline.py  time_modifier.py
attendance_modifier/services/transformation/: base_strategy.py  transformation_service.py  type_a_strategy.py  type_b_strategy.py  validating_decorator.py
attendance_modifier/utils/: time_utils.py  validators.py
config/: container.py  rules.py
src/: __init__.py
src/app/: __init__.py  classifier.py  modifier.py  pipeline.py
src/app/contracts/: __init__.py  modifier.py  parser.py  pdf_generator.py  pdf_reader.py
src/app/transformation/: __init__.py  base_strategy.py  observers.py  transformation_service.py  type_a_strategy.py  type_b_strategy.py  (+1 more)
src/domain/: __init__.py  enums.py  exceptions.py  models.py
src/infra/: __init__.py  ocr_reader_impl.py  pdf_generator_impl.py
tests/: test_patterns.py  test_time_utils.py  test_transformations.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_layer_imports.py
utils/: regex_helpers.py  time_utils.py
(+6 files in other folders)
