[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "attendance-modifier"
version = "1.0.0"
description = "PDF Attendance Report Modifier"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reportlab==4.0.8",
    "PyMuPDF==1.23.8",
    "pytesseract",
    "pdf2image",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
